--- a/package.json
+++ b/package.json
@@ -14,19 +14,24 @@
     "@babel/core": "^7.21.0",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@babel/runtime": "^7.21.0",
     "autoprefixer": "^10.4.13",
     "babel-loader": "^9.1.2",
+    "babel-runtime": "^6.26.0",
     "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.0",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "mini-css-extract-plugin": "^2.7.2",
     "postcss-loader": "^7.0.2",
+    "react-hot-loader": "^4.5.3",
     "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   },
   "dependencies": {
+    "element-react": "^1.4.34",
+    "element-theme-default": "^1.4.13",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
