--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
     "webpack-cli": "^5.0.1"
   },
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.21.0",
+    "@babel/runtime-corejs3": "^7.21.0",
+    "axios": "^1.3.4",
+    "core-js": "^3.29.0",
     "element-react": "^1.4.34",
     "element-theme-default": "^1.4.13",
     "react": "^16.13.1",
